Fix java21 version